Реализовал ряд запросов по заказам, системным ошибкам и реализовал примерную спецификацию запросов по заказам
